--- a/contato.html
+++ b/contato.html
@@ -45,7 +45,7 @@
             <td><img src="img/insta.png" alt="Logo do Instagram" width="50" height="50"></td>
             <td>
                 <ul>
-                    <li><a href="https://www.instagram.com/">@marcopizzas</a></li>
+                    <li><a href="https://www.instagram.com/">@pinkstore</a></li>
                 </ul>
             </td>
         </tr>
@@ -53,7 +53,7 @@
             <td><img src="img/face.png" alt="Logo do Facebook" width="50" height="50"></td>
             <td>
                 <ul>
-                    <li><a href="https://www.facebook.com/?locale=pt_BR">Marco Pizza's</a></li>
+                    <li><a href="https://www.facebook.com/?locale=pt_BR">Pink Store</a></li>
                 </ul>
             </td>
         </tr>
